# mitotem-interactive

./: .gitignore  index.html  next.config.js  package-lock.json  package.json  pyproject.toml  robot.sh  vite.config.ts
api/: app.py  index.py
app/: actions.jsx  actions.tsx  hooks.tsx  layout.jsx  layout.tsx  loading.tsx  page.jsx  page.tsx  sidebar.jsx  sidebar.tsx  workspace.jsx  workspace.tsx
app/@output/[img]/: page.tsx
app/[img]/: page.jsx  page.tsx
app/ui/: sidebar.tsx  spinner.tsx  tools.tsx  workspace.tsx
client/: package-lock.json  package.json
client/app/: canvas.jsx  layout.jsx  page.jsx  sidebar.jsx
src/: App.tsx  actions.tsx  hooks.tsx  index.css  main.tsx
src/components/: canvas.tsx  output.tsx  panel.tsx  sidebar.tsx  spinner.tsx  tools.tsx  upload.tsx  workspace.tsx
test/robot/: TestLib.py  resource.robot  upload.robot
test/robot/input/: test_valid_1.tif  test_valid_2.tif  test_valid_3.tif  test_valid_4.tiff  test_valid_5.TIF
